fix: updates the name of the mp3 file

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </button>
     </div>
 
-    <audio id="musicaFundo" src="Giovanna - Staffan Carlén.mp3" loop muted></audio>
+    <audio id="musicaFundo" src="giovanna-staffancarlen.mp3" loop muted></audio>
 
     <script src="script.js"></script>
 </body>
