fix: trying to fix deploy issue again

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nossa Constelação - 5 Anos</title>
     
-    <link rel="shortcut icon" href="public/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
@@ -42,7 +42,7 @@
         </button>
     </div>
 
-    <audio id="musicaFundo" src="public/giovanna-staffancarlen.mp3" loop muted></audio>
+    <audio id="musicaFundo" src="giovanna-staffancarlen.mp3" loop muted></audio>
 
     <script src="script.js"></script>
 </body>
